{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 1679,
  "lineage": "cca2b22b-9d2e-9be6-f3e4-22a614354878",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "aws_webserver_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-096ad2f8dcc4df93d",
            "arn": "arn:aws:ec2:ap-southeast-1:331283279341:instance/i-068742702a6c840e4",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-068742702a6c840e4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "KeyPair-TTH",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-060675dbc40f76d1a",
            "private_dns": "ip-10-168-20-181.ap-southeast-1.compute.internal",
            "private_ip": "10.168.20.181",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-024d446fcc2862974",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b10b1641aeaf42f1",
            "tags": {
              "Name": "chkp-asg-thtan-webserver-1"
            },
            "tags_all": {
              "Name": "chkp-asg-thtan-webserver-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e363ed96786b6ee9"
            ]
          },
          "dependencies": [
            "aws_security_group.chkp_webserver_sg",
            "aws_subnet.cg_web_sub",
            "aws_vpc.cg_vpc",
            "data.aws_ami.aws_webserver",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-096ad2f8dcc4df93d",
            "arn": "arn:aws:ec2:ap-southeast-1:331283279341:instance/i-0418dc66ddc458513",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0418dc66ddc458513",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "KeyPair-TTH",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06ceae78d7d3cae9a",
            "private_dns": "ip-10-168-21-86.ap-southeast-1.compute.internal",
            "private_ip": "10.168.21.86",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f0cbc353580efebd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-063732229bea80a71",
            "tags": {
              "Name": "chkp-asg-thtan-webserver-2"
            },
            "tags_all": {
              "Name": "chkp-asg-thtan-webserver-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e363ed96786b6ee9"
            ]
          },
          "dependencies": [
            "aws_security_group.chkp_webserver_sg",
            "aws_subnet.cg_web_sub",
            "aws_vpc.cg_vpc",
            "data.aws_ami.aws_webserver",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-096ad2f8dcc4df93d",
            "arn": "arn:aws:ec2:ap-southeast-1:331283279341:instance/i-0ed8d519ce64b1f83",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ed8d519ce64b1f83",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "KeyPair-TTH",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e68a4f461acb10b4",
            "private_dns": "ip-10-168-22-94.ap-southeast-1.compute.internal",
            "private_ip": "10.168.22.94",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0655003f70b8eb727",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00779bdcae7835765",
            "tags": {
              "Name": "chkp-asg-thtan-webserver-3"
            },
            "tags_all": {
              "Name": "chkp-asg-thtan-webserver-3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e363ed96786b6ee9"
            ]
          },
          "dependencies": [
            "aws_security_group.chkp_webserver_sg",
            "aws_subnet.cg_web_sub",
            "aws_vpc.cg_vpc",
            "data.aws_ami.aws_webserver",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cg_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:331283279341:internet-gateway/igw-00a2016a45114d89e",
            "id": "igw-00a2016a45114d89e",
            "owner_id": "331283279341",
            "tags": {
              "Name": "chkp-asg-thtan_igw"
            },
            "tags_all": {
              "Name": "chkp-asg-thtan_igw"
            },
            "vpc_id": "vpc-072637554d2b85376"
          },
          "dependencies": [
            "aws_vpc.cg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "chkp_ext_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:331283279341:loadbalancer/app/chkp-ext-alb/4beab940b56e90fe",
            "arn_suffix": "app/chkp-ext-alb/4beab940b56e90fe",
            "dns_name": "chkp-ext-alb-1469550488.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:331283279341:loadbalancer/app/chkp-ext-alb/4beab940b56e90fe",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "chkp-ext-alb",
            "security_groups": [
              "sg-06181c43d23f2e1c8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-022889e134e82157d"
              },
              {
                "subnet_id": "subnet-03632329693af1d63"
              },
              {
                "subnet_id": "subnet-0ecdc20d8db46b41d"
              }
            ],
            "subnets": [
              "subnet-022889e134e82157d",
              "subnet-03632329693af1d63",
              "subnet-0ecdc20d8db46b41d"
            ],
            "tags": {
              "name": "chkp-asg-thtan_ext_alb"
            },
            "tags_all": {
              "name": "chkp-asg-thtan_ext_alb"
            },
            "vpc_id": "vpc-072637554d2b85376",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_security_group.chkp_ext_alb_sg",
            "aws_subnet.cg_nb_sub",
            "aws_vpc.cg_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "chkp_int_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:331283279341:loadbalancer/app/chkp-int-alb/ad2471f87679deaa",
            "arn_suffix": "app/chkp-int-alb/ad2471f87679deaa",
            "dns_name": "internal-chkp-int-alb-1959429797.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:331283279341:loadbalancer/app/chkp-int-alb/ad2471f87679deaa",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "chkp-int-alb",
            "security_groups": [
              "sg-0cb8d04c750ca4f8c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00779bdcae7835765"
              },
              {
                "subnet_id": "subnet-063732229bea80a71"
              },
              {
                "subnet_id": "subnet-0b10b1641aeaf42f1"
              }
            ],
            "subnets": [
              "subnet-00779bdcae7835765",
              "subnet-063732229bea80a71",
              "subnet-0b10b1641aeaf42f1"
            ],
            "tags": {
              "x-chkp-forwarding": "HTTP-9080-80",
              "x-chkp-management": "cpsms",
              "x-chkp-template": "cptemplate"
            },
            "tags_all": {
              "x-chkp-forwarding": "HTTP-9080-80",
              "x-chkp-management": "cpsms",
              "x-chkp-template": "cptemplate"
            },
            "vpc_id": "vpc-072637554d2b85376",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_security_group.chkp_int_alb_sg",
            "aws_subnet.cg_web_sub",
            "aws_vpc.cg_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "chkp_ext_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:331283279341:listener/app/chkp-ext-alb/4beab940b56e90fe/237dd11f0bcf8a9a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:331283279341:targetgroup/chkp-ext-alb-tg/b39e70dd8dc538d3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:331283279341:listener/app/chkp-ext-alb/4beab940b56e90fe/237dd11f0bcf8a9a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:331283279341:loadbalancer/app/chkp-ext-alb/4beab940b56e90fe",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.chkp_ext_alb",
            "aws_lb_target_group.chkp_ext_alb_tg",
            "aws_security_group.chkp_ext_alb_sg",
            "aws_subnet.cg_nb_sub",
            "aws_vpc.cg_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "chkp_int_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:331283279341:listener/app/chkp-int-alb/ad2471f87679deaa/7b799e077f6f5ed4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:331283279341:targetgroup/chkp-int-lb-tg/a356421219e46b28",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:331283279341:listener/app/chkp-int-alb/ad2471f87679deaa/7b799e077f6f5ed4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:331283279341:loadbalancer/app/chkp-int-alb/ad2471f87679deaa",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.chkp_int_alb",
            "aws_lb_target_group.chkp_int_alb_tg",
            "aws_security_group.chkp_int_alb_sg",
            "aws_subnet.cg_web_sub",
            "aws_vpc.cg_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "chkp_ext_alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:331283279341:targetgroup/chkp-ext-alb-tg/b39e70dd8dc538d3",
            "arn_suffix": "targetgroup/chkp-ext-alb-tg/b39e70dd8dc538d3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:331283279341:targetgroup/chkp-ext-alb-tg/b39e70dd8dc538d3",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "chkp-ext-alb-tg",
            "port": 9080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "name": "chkp-asg-thtan_ext_alb_tg"
            },
            "tags_all": {
              "name": "chkp-asg-thtan_ext_alb_tg"
            },
            "target_type": "instance",
            "vpc_id": "vpc-072637554d2b85376"
          },
          "dependencies": [
            "aws_vpc.cg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "chkp_int_alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:331283279341:targetgroup/chkp-int-lb-tg/a356421219e46b28",
            "arn_suffix": "targetgroup/chkp-int-lb-tg/a356421219e46b28",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:331283279341:targetgroup/chkp-int-lb-tg/a356421219e46b28",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "chkp-int-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "name": "chkp-asg-thtan_int_alb_tg"
            },
            "tags_all": {
              "name": "chkp-asg-thtan_int_alb_tg"
            },
            "target_type": "instance",
            "vpc_id": "vpc-072637554d2b85376"
          },
          "dependencies": [
            "aws_vpc.cg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "chkp_int_alb_tg_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:331283279341:targetgroup/chkp-int-lb-tg/a356421219e46b28-20240412092531766600000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:331283279341:targetgroup/chkp-int-lb-tg/a356421219e46b28",
            "target_id": "i-068742702a6c840e4"
          },
          "dependencies": [
            "aws_instance.aws_webserver_instance",
            "aws_lb_target_group.chkp_int_alb_tg",
            "aws_security_group.chkp_webserver_sg",
            "aws_subnet.cg_web_sub",
            "aws_vpc.cg_vpc",
            "data.aws_ami.aws_webserver",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:331283279341:targetgroup/chkp-int-lb-tg/a356421219e46b28-20240412092531472500000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:331283279341:targetgroup/chkp-int-lb-tg/a356421219e46b28",
            "target_id": "i-0418dc66ddc458513"
          },
          "dependencies": [
            "aws_instance.aws_webserver_instance",
            "aws_lb_target_group.chkp_int_alb_tg",
            "aws_security_group.chkp_webserver_sg",
            "aws_subnet.cg_web_sub",
            "aws_vpc.cg_vpc",
            "data.aws_ami.aws_webserver",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:331283279341:targetgroup/chkp-int-lb-tg/a356421219e46b28-20240412092531496700000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:331283279341:targetgroup/chkp-int-lb-tg/a356421219e46b28",
            "target_id": "i-0ed8d519ce64b1f83"
          },
          "dependencies": [
            "aws_instance.aws_webserver_instance",
            "aws_lb_target_group.chkp_int_alb_tg",
            "aws_security_group.chkp_webserver_sg",
            "aws_subnet.cg_web_sub",
            "aws_vpc.cg_vpc",
            "data.aws_ami.aws_webserver",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cg_nb_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:331283279341:route-table/rtb-0f494333bdf845d44",
            "id": "rtb-0f494333bdf845d44",
            "owner_id": "331283279341",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00a2016a45114d89e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "chkp-asg-thtan_nb_rt"
            },
            "tags_all": {
              "Name": "chkp-asg-thtan_nb_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-072637554d2b85376"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.cg_igw",
            "aws_vpc.cg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cg_web_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:331283279341:route-table/rtb-017034695bcbdc33f",
            "id": "rtb-017034695bcbdc33f",
            "owner_id": "331283279341",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "chkp-asg-thtan_web_rt"
            },
            "tags_all": {
              "Name": "chkp-asg-thtan_web_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-072637554d2b85376"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cg_mgmt_sub_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04129791dee604154",
            "route_table_id": "rtb-0f494333bdf845d44",
            "subnet_id": "subnet-00fa8caa812b900f6"
          },
          "dependencies": [
            "aws_internet_gateway.cg_igw",
            "aws_route_table.cg_nb_rt",
            "aws_subnet.cg_mgmt_a_sub",
            "aws_vpc.cg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cg_nb_sub_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09792acd923744d9b",
            "route_table_id": "rtb-0f494333bdf845d44",
            "subnet_id": "subnet-022889e134e82157d"
          },
          "dependencies": [
            "aws_internet_gateway.cg_igw",
            "aws_route_table.cg_nb_rt",
            "aws_subnet.cg_nb_sub",
            "aws_vpc.cg_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09eacf252a262dcd3",
            "route_table_id": "rtb-0f494333bdf845d44",
            "subnet_id": "subnet-0ecdc20d8db46b41d"
          },
          "dependencies": [
            "aws_internet_gateway.cg_igw",
            "aws_route_table.cg_nb_rt",
            "aws_subnet.cg_nb_sub",
            "aws_vpc.cg_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017ad240f8d908a26",
            "route_table_id": "rtb-0f494333bdf845d44",
            "subnet_id": "subnet-03632329693af1d63"
          },
          "dependencies": [
            "aws_internet_gateway.cg_igw",
            "aws_route_table.cg_nb_rt",
            "aws_subnet.cg_nb_sub",
            "aws_vpc.cg_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cg_web_sub_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f921375b6f93117f",
            "route_table_id": "rtb-017034695bcbdc33f",
            "subnet_id": "subnet-0b10b1641aeaf42f1"
          },
          "dependencies": [
            "aws_route_table.cg_web_rt",
            "aws_subnet.cg_web_sub",
            "aws_vpc.cg_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-088eb945a87ed0bb2",
            "route_table_id": "rtb-017034695bcbdc33f",
            "subnet_id": "subnet-063732229bea80a71"
          },
          "dependencies": [
            "aws_route_table.cg_web_rt",
            "aws_subnet.cg_web_sub",
            "aws_vpc.cg_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0052179f7e08e3934",
            "route_table_id": "rtb-017034695bcbdc33f",
            "subnet_id": "subnet-00779bdcae7835765"
          },
          "dependencies": [
            "aws_route_table.cg_web_rt",
            "aws_subnet.cg_web_sub",
            "aws_vpc.cg_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "chkp_ext_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:331283279341:security-group/sg-06181c43d23f2e1c8",
            "description": "External Load Balancer Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06181c43d23f2e1c8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "chkp-asg-thtan-ext-lb-sg",
            "name_prefix": "",
            "owner_id": "331283279341",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "chkp-asg-thtan-ext-alb-sg"
            },
            "tags_all": {
              "Name": "chkp-asg-thtan-ext-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-072637554d2b85376"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "chkp_int_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:331283279341:security-group/sg-0cb8d04c750ca4f8c",
            "description": "Internal Load Balancer Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cb8d04c750ca4f8c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "chkp-asg-thtan-int-lb-sg",
            "name_prefix": "",
            "owner_id": "331283279341",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "chkp-asg-thtan-int-alb-sg"
            },
            "tags_all": {
              "Name": "chkp-asg-thtan-int-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-072637554d2b85376"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "chkp_webserver_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:331283279341:security-group/sg-0e363ed96786b6ee9",
            "description": "Webserver Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e363ed96786b6ee9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "chkp-asg-thtan-webserver-sg",
            "name_prefix": "",
            "owner_id": "331283279341",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "chkp-webserver-sg"
            },
            "tags_all": {
              "Name": "chkp-webserver-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-072637554d2b85376"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cg_mgmt_a_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:331283279341:subnet/subnet-00fa8caa812b900f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.168.1.0/24",
            "id": "subnet-00fa8caa812b900f6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "331283279341",
            "tags": {
              "Name": "chkp-asg-thtan_mgmt_sub_1"
            },
            "tags_all": {
              "Name": "chkp-asg-thtan_mgmt_sub_1"
            },
            "vpc_id": "vpc-072637554d2b85376"
          },
          "dependencies": [
            "aws_vpc.cg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cg_nb_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:331283279341:subnet/subnet-022889e134e82157d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.168.10.0/24",
            "id": "subnet-022889e134e82157d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "331283279341",
            "tags": {
              "Name": "chkp-asg-thtan_nb_sub_1"
            },
            "tags_all": {
              "Name": "chkp-asg-thtan_nb_sub_1"
            },
            "vpc_id": "vpc-072637554d2b85376"
          },
          "dependencies": [
            "aws_vpc.cg_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:331283279341:subnet/subnet-0ecdc20d8db46b41d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.168.11.0/24",
            "id": "subnet-0ecdc20d8db46b41d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "331283279341",
            "tags": {
              "Name": "chkp-asg-thtan_nb_sub_2"
            },
            "tags_all": {
              "Name": "chkp-asg-thtan_nb_sub_2"
            },
            "vpc_id": "vpc-072637554d2b85376"
          },
          "dependencies": [
            "aws_vpc.cg_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:331283279341:subnet/subnet-03632329693af1d63",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.168.12.0/24",
            "id": "subnet-03632329693af1d63",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "331283279341",
            "tags": {
              "Name": "chkp-asg-thtan_nb_sub_3"
            },
            "tags_all": {
              "Name": "chkp-asg-thtan_nb_sub_3"
            },
            "vpc_id": "vpc-072637554d2b85376"
          },
          "dependencies": [
            "aws_vpc.cg_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cg_web_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:331283279341:subnet/subnet-0b10b1641aeaf42f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.168.20.0/24",
            "id": "subnet-0b10b1641aeaf42f1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "331283279341",
            "tags": {
              "Name": "chkp-asg-thtan_web_sub_1"
            },
            "tags_all": {
              "Name": "chkp-asg-thtan_web_sub_1"
            },
            "vpc_id": "vpc-072637554d2b85376"
          },
          "dependencies": [
            "aws_vpc.cg_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:331283279341:subnet/subnet-063732229bea80a71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.168.21.0/24",
            "id": "subnet-063732229bea80a71",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "331283279341",
            "tags": {
              "Name": "chkp-asg-thtan_web_sub_2"
            },
            "tags_all": {
              "Name": "chkp-asg-thtan_web_sub_2"
            },
            "vpc_id": "vpc-072637554d2b85376"
          },
          "dependencies": [
            "aws_vpc.cg_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:331283279341:subnet/subnet-00779bdcae7835765",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.168.22.0/24",
            "id": "subnet-00779bdcae7835765",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "331283279341",
            "tags": {
              "Name": "chkp-asg-thtan_web_sub_3"
            },
            "tags_all": {
              "Name": "chkp-asg-thtan_web_sub_3"
            },
            "vpc_id": "vpc-072637554d2b85376"
          },
          "dependencies": [
            "aws_vpc.cg_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cg_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:331283279341:vpc/vpc-072637554d2b85376",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.168.0.0/16",
            "default_network_acl_id": "acl-00a28881d62433cb7",
            "default_route_table_id": "rtb-081135fedc8ad647f",
            "default_security_group_id": "sg-0ed9b94015c8cc618",
            "dhcp_options_id": "dopt-09688acf4dc7c238b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-072637554d2b85376",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-081135fedc8ad647f",
            "owner_id": "331283279341",
            "tags": {
              "Name": "chkp-asg-thtan_vpc"
            },
            "tags_all": {
              "Name": "chkp-asg-thtan_vpc"
            }
          }
        }
      ]
    }
  ]
}